# wasm-workers-server

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_CLA.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  deny.toml  go.mod  install.sh
.github/workflows/: artifacts.yml  build.yml  container-preview.yml  container-release.yml  release.yml
crates/api-manage/: Cargo.toml
crates/api-manage-openapi/: Cargo.toml  build.rs
crates/api-manage-openapi/src/: lib.rs  openapi.json
crates/api-manage/src/: lib.rs
crates/api-manage/src/handlers/: mod.rs
crates/api-manage/src/handlers/v0/: mod.rs  workers.rs
crates/api-manage/src/models/: mod.rs  worker.rs  worker_config.rs
crates/config/: Cargo.toml
crates/config/src/: errors.rs  lib.rs
crates/data-kv/: Cargo.toml
crates/data-kv/src/: lib.rs  store.rs
crates/panel/: Cargo.toml  build.rs
crates/panel/client/: .gitignore  index.html  package.json  vite.config.js
crates/panel/src/: lib.rs
crates/project/: Cargo.toml  README.md
crates/project/src/: errors.rs  fetch.rs  lib.rs  metadata.rs  options.rs
crates/project/src/types/: git.rs  mod.rs
crates/router/: Cargo.toml
crates/router/src/: files.rs  lib.rs  route.rs
crates/router/src/route/: route_type.rs  segment.rs
crates/runtimes/: Cargo.toml
crates/runtimes-manager/: Cargo.toml
crates/runtimes-manager/src/: fetch.rs  lib.rs  metadata.rs
crates/runtimes/src/: errors.rs  lib.rs  runtime.rs
crates/runtimes/src/modules/: external.rs  javascript.rs  mod.rs  native.rs
crates/server/: Cargo.toml
crates/server/src/: errors.rs  lib.rs  static_assets.rs
crates/server/src/handlers/: assets.rs  mod.rs  not_found.rs  worker.rs
crates/store/: Cargo.toml
crates/store/src/: errors.rs  lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: config.rs  errors.rs  io.rs  lib.rs  stdio.rs
crates/worker/src/bindings/: http.rs  mod.rs
crates/worker/src/features/: data.rs  folders.rs  http_requests.rs  mod.rs  wasi_nn.rs
docs/: README.md  docusaurus.config.js  package-lock.json  package.json
docs/docs/: containers.md  examples.md  how-it-works.md  intro.md  start.md
docs/static/: _redirects
examples/: Makefile  README.md
examples/components/: .gitignore  README.md
examples/containers/: Dockerfile  Makefile  README.md
examples/go-basic/: README.md  go.mod  main.go
examples/go-envs/: README.md  envs.go  envs.toml
examples/go-fetch/: README.md  go.mod  go.sum  index.toml  main.go
examples/go-kv/: README.md  counter.go
examples/go-params/: README.md  main.go
examples/js-async/: README.md  index.js
examples/js-basic/: README.md  handler.js  index.js
examples/js-catchall/: README.md  about.js
examples/js-fetch/: README.md  index.js  index.toml
examples/js-hono/: README.md
examples/js-json/: README.md  handler.js  handler.toml
examples/js-modules/: README.md  index.js
examples/js-params/: README.md  [id].js  fixed.js
examples/js-redirect/: README.md  handler.js
examples/js-tictactoe/: README.md  handler.js  handler.toml
examples/pdf-create/: Cargo.toml
examples/protomaps/: .gitignore  Dockerfile  Makefile  README.md
examples/python-basic/: README.md  index.py  worker.py
examples/python-envs/: README.md  envs.py
examples/python-kv/: .wws.toml  README.md  counter.py  counter.toml
examples/python-libs/: .wws.toml  README.md  index.py  index.toml
examples/python-mount/: README.md  index.py  index.toml
examples/ruby-basic/: .wws.toml  README.md  index.rb  worker.rb
examples/ruby-envs/: README.md  envs.rb
examples/ruby-kv/: .wws.toml  README.md  counter.rb
examples/ruby-mount/: .wws.toml  README.md  image.rb  image.toml
examples/rust-basic/: Cargo.toml  README.md  rust-basic.toml
examples/rust-fetch/: Cargo.toml  README.md  index.toml
examples/rust-kv/: Cargo.toml  README.md  kv.toml  rust-kv.toml
examples/rust-params/: Cargo.toml  README.md
examples/rust-pdf-create/: Cargo.toml  README.md
examples/rust-wasi-nn/: .gitignore  Cargo.toml  inference.toml  inference.wasm  prepare.sh
examples/rust-wasi-nn-preload/: .gitignore  Cargo.toml  README.md  index.js  inference.toml  inference.wasm  prepare.sh
examples/rust-wasi-nn/_models/: dataset.json
examples/rust-wasi-nn/public/: main.js
examples/rust-wasi-nn/src/: main.rs
examples/with-params/: [id].js
examples/zig-basic/: README.md  build.zig
examples/zig-envs/: README.md  build.zig
examples/zig-examples/: README.md  build.zig  build.zig.zon
examples/zig-kv/: README.md  build.zig
examples/zig-module/: build.zig
examples/zig-mount/: build.zig
examples/zig-params/: README.md  build.zig
image/: Dockerfile  Prebuilt.dockerfile
kits/go/: go.mod  go.sum
kits/javascript/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  wasm-workers-quick-js-engine.wasm
kits/javascript/shims/: bindings.js  index.js  package.json
kits/javascript/shims/types/: cache.js  headers.js  index.js  request.js  response.js
kits/javascript/src/: bindings.rs  error.rs  glue.js  main.rs
kits/python/: Cargo.toml  Makefile  README.md  build.rs
kits/python/src/: bindings.rs  main.rs
kits/rust/: Cargo.toml
kits/rust/handler/: Cargo.toml
kits/rust/handler/src/: args.rs  expand.rs  lib.rs
kits/rust/src/: bindings.rs  cache.rs  content.rs  io.rs  lib.rs
kits/rust/worker/: Cargo.toml
kits/rust/worker/src/: args.rs  expand.rs  lib.rs
runtimes/python-http/: Cargo.toml  build.rs
runtimes/python-http/src/: lib.rs  py_module.rs
src/: config.rs  fetch.rs  lib.rs  main.rs  router.rs  runner.rs  store.rs
src/commands/: main.rs  mod.rs  runtimes.rs
src/data/: README.md  kv.rs  mod.rs
src/router/: files.rs  mod.rs  route.rs  routes.rs
src/routing/: mod.rs  router.rs
src/runtimes/: manager.rs  metadata.rs  mod.rs  remote_file.rs  repository.rs  runtime.rs
src/utils/: errors.rs  mod.rs  options.rs  runtimes.rs
src/workers/: mod.rs  runtime.rs  wasm_io.rs  worker.rs
tests/: e2e.rs
tests/data/: [id].js  fixed.js
wit/core/: http-types.wit  http.wit
wit/go-ephemeral/: http-types.wit  http.wit
(+152 files in other folders)
