[package]
name = "wasm-workers-server"
description = "A WebAssembly framework to develop and run serverless applications anywhere"
version = "1.0.1"
edition = "2021"
license = "Apache-2.0"
homepage = "https://workers.wasmlabs.dev/"
documentation = "https://workers.wasmlabs.dev/docs/intro"
repository = "https://github.com/vmware-labs/wasm-workers-server/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wws"
path = "src/main.rs"

[dependencies]
wasmtime = "6.0.1"
wasmtime-wasi = "6.0.1"
anyhow = "1.0.66"
blake3 = "1.3.3"
wasi-common = "6.0.1"
actix-web = "4"
actix-files = "0.6.2"
lazy_static = "1.4.0"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
wax = "0.5.0"
toml = "0.7.0"
base64 = "0.21.0"
clap = { version = "4.0.10", features = ["derive"] }
regex = "1"
url = "2.3.1"
reqwest = { version = "0.11" }
sha256 = "1.1.1"
prettytable-rs = "0.10.0"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "=0.10.45", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "=0.10.45", features = ["vendored"] }

[workspace]
members = [
  "kits/rust",
  "kits/rust/worker",
  "kits/javascript"
]
# Exclude examples
exclude = [
  "examples/pdf-create",
  "examples/rust-basic",
  "examples/rust-kv",
  "examples/rust-params"
]
