[package]
name = "wasm-workers-server"
description = "A WebAssembly framework to develop and run serverless applications anywhere"
homepage = "https://workers.wasmlabs.dev/"
documentation = "https://workers.wasmlabs.dev/docs/intro"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# Common package definition for all crates / kits
[workspace.package]
version = "1.2.0"
edition = "2021"
authors = [ "Wasm Labs <https://wasmlabs.dev>" ]
license = "Apache-2.0"
repository = "https://github.com/vmware-labs/wasm-workers-server/"

[[bin]]
name = "wws"
path = "src/main.rs"

# Main binary (wws CLI dependencies)
[dependencies]
anyhow = { workspace = true }
actix-web = { workspace = true }
env_logger = "0.9.0"
clap = { version = "4.0.10", features = ["derive"] }
prettytable-rs = "0.10.0"
wws-config = { workspace = true }
wws-router = { workspace = true }
wws-server = { workspace = true }
wws-project = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "=0.10.48", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "=0.10.48", features = ["vendored"] }

[workspace]
members = [
  "crates/config",
  "crates/data-kv",
  "crates/project",
  "crates/router",
  "crates/runtimes",
  "crates/server",
  "crates/store",
  "crates/worker",
  "kits/rust",
  "kits/rust/worker",
  "kits/javascript"
]
# Exclude examples
exclude = [
  "examples/pdf-create",
  "examples/rust-basic",
  "examples/rust-kv",
  "examples/rust-params"
]

[workspace.dependencies]
actix-web = "4"
anyhow = "1.0.66"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
toml = "0.7.0"
wws-config = { path = "./crates/config" }
wws-runtimes = { path = "./crates/runtimes" }
wws-data-kv = { path = "./crates/data-kv" }
wws-router = { path = "./crates/router" }
wws-server = { path = "./crates/server" }
wws-store = { path = "./crates/store" }
wws-worker = { path = "./crates/worker" }
wws-project = { path = "./crates/project" }
wasmtime = "6.0.2"
wasmtime-wasi = "6.0.2"
wasi-common = "6.0.2"
