[package]
name = "wasm-workers-server"
description = "A WebAssembly framework to develop and run serverless applications anywhere"
homepage = "https://workers.wasmlabs.dev/"
documentation = "https://workers.wasmlabs.dev/docs/intro"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# Common package definition for all crates / kits
[workspace.package]
version = "1.4.0"
edition = "2021"
authors = [ "Wasm Labs <https://wasmlabs.dev>" ]
license = "Apache-2.0"
repository = "https://github.com/vmware-labs/wasm-workers-server/"

[[bin]]
name = "wws"
path = "src/main.rs"

# Main binary (wws CLI dependencies)
[dependencies]
anyhow = { workspace = true }
actix-web = { workspace = true }
env_logger = "0.10.0"
clap = { version = "4.0.10", features = ["derive"] }
prettytable-rs = "0.10.0"
wws-config = { workspace = true }
wws-router = { workspace = true }
wws-server = { workspace = true }
wws-project = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[features]
default = ["all"]
all = ["wws_config", "wws_router", "wws_server"]
wws_config = []
wws_router = []
wws_server = []

vendored-openssl = ["wws-project/vendored-openssl"]

[workspace]
members = [
  "crates/api-manage",
  "crates/api-manage-openapi",
  "crates/config",
  "crates/data-kv",
  "crates/project",
  "crates/panel",
  "crates/router",
  "crates/runtimes",
  "crates/server",
  "crates/store",
  "crates/worker",
  "kits/rust",
  "kits/rust/worker",
  "kits/javascript"
]
# Exclude examples
exclude = [
  "examples/pdf-create",
  "examples/rust-basic",
  "examples/rust-fetch",
  "examples/rust-kv",
  "examples/rust-params"
]

[workspace.dependencies]
actix-web = "4"
anyhow = "1.0.66"
lazy_static = "1.4.0"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
tokio = "1.28"
toml = "0.7.0"
wws-config = { path = "./crates/config" }
wws-runtimes = { path = "./crates/runtimes" }
wws-data-kv = { path = "./crates/data-kv" }
wws-router = { path = "./crates/router" }
wws-server = { path = "./crates/server" }
wws-store = { path = "./crates/store" }
wws-worker = { path = "./crates/worker" }
wws-project = { path = "./crates/project" }
wws-panel = { path = "./crates/panel" }
wws-api-manage = { path = "./crates/api-manage" }
wws-api-manage-openapi = { path = "./crates/api-manage-openapi" }
wasmtime = "10.0.1"
wasmtime-wasi = "10.0.1"
wasi-common = "10.0.1"
path-slash = "0.2.1"
openssl = { version = "=0.10.55" }
