[package]
name = "wws-config"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
wws-project = { workspace = true }
