[package]
name = "wws-project"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
wws-store = { workspace = true }
url = "2.3.1"
sha256 = "1.1.1"
git2 = "0.17.2"
# Not all platforms require OpenSSL
openssl = { workspace = true, optional = true }

[features]
vendored-openssl = ["openssl/vendored"]

[dev-dependencies]
path-slash = { workspace = true }
