[package]
name = "wws-router"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
wws-config = { workspace = true }
wws-store = { workspace = true }
wws-runtimes-manager = { workspace = true }
wws-worker = { workspace = true }
lazy_static = "1.4.0"
regex = "1"
wax = "0.5.0"

[dev-dependencies]
path-slash = "0.2.1"
