[package]
name = "wws-runtimes"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
wasmtime-wasi = { workspace = true }
wws-config = { workspace = true }
wws-store = { workspace = true }
wws-project = { workspace = true }
