[package]
name = "wws-worker"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
doctest = false

[dependencies]
actix-web = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-nn = { workspace = true }
wasi-common = { workspace = true }
wws-config = { workspace = true }
wws-data-kv = { workspace = true }
wws-runtimes = { workspace = true }
# We didn't integrate components yet. For an initial binding implementation,
# we will use the wit-bindgen-wasmtime crate maintained by the Fermyon team.
wit-bindgen-wasmtime = { git = "https://github.com/fermyon/wit-bindgen-backport", rev = "b89d5079ba5b07b319631a1b191d2139f126c976" }
base64 = "0.21.0"
sha256 = "1.1.1"
