[package]
name = "rust-wasi-nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasi-nn = "0.4.0"
anyhow = "1.0.63"
image2tensor = "0.2.0"
wasm-workers-rs = { path = "../../kits/rust" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
base64 = "0.21.2"
