[package]
name = "wasm-workers-rs"
version = "1.0.1"
edition = "2021"
license = "Apache-2.0"
homepage = "https://workers.wasmlabs.dev/"
documentation = "https://workers.wasmlabs.dev/docs/intro"
repository = "https://github.com/vmware-labs/wasm-workers-server/"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.63"
http = "0.2.8"
worker = { path = "./worker" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
base64 = "0.21.0"