[package]
name = "wasm-workers-rs"
homepage = "https://workers.wasmlabs.dev/"
documentation = "https://workers.wasmlabs.dev/docs/intro"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.63"
http = "0.2.8"
worker = { path = "./worker" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
base64 = "0.21.0"